manifests/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: argos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argos
  template:
    metadata:
      labels:
        app: argos
        app.kubernetes.io/component: backstage
        backstage.io/kubernetes-id: argocd
    spec:
      containers:
        - name: argos
          image: quay.io/quay.io/argoproj/argocd:v2.9.5/argos:latest
          ports:
            - name: http-80
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
