manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argos
  labels:
    app: argos
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: argocd
spec:
  ports:
    - name: http-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: argos
