manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argos
  namespace: argocd
  labels:
    app: argos
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: argocd
spec:
  - host: argocd-server.argocd.svc
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argos
              port:
                number: 80
